[package]
name = "chksum-hash"
version = "0.4.1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.59.0"
description = "A simple cryptography library that provides an interface for calculating hash digests using both batch and stream computation."
readme = ".cargo/README.md"
repository = "https://github.com/ferric-bytes/chksum-hash"
license = "MIT"
keywords = ["checksum", "digest", "hash"]
categories = ["cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { version = "1.0.31", optional = true }

[build-dependencies]
anyhow = "1.0.65"
chksum-build = { version = "0.0.3", default-features = false, features = ["script"] }

[features]
default = ["error", "md5", "sha1", "sha2"]
error = ["thiserror"]
md5 = []
sha1 = []
sha2 = ["sha2-224", "sha2-256", "sha2-384", "sha2-512"]
sha2-224 = []
sha2-256 = []
sha2-384 = []
sha2-512 = []

[[test]]
name = "md5"
required-features = ["md5"]

[[test]]
name = "sha1"
required-features = ["sha1"]

[[test]]
name = "sha2_224"
required-features = ["sha2-224"]

[[test]]
name = "sha2_256"
required-features = ["sha2-256"]

[[test]]
name = "sha2_384"
required-features = ["sha2-384"]

[[test]]
name = "sha2_512"
required-features = ["sha2-512"]

[[example]]
name = "md5"
required-features = ["md5"]

[[example]]
name = "sha1"
required-features = ["sha1"]

[[example]]
name = "sha2_224"
required-features = ["sha2-224"]

[[example]]
name = "sha2_256"
required-features = ["sha2-256"]

[[example]]
name = "sha2_384"
required-features = ["sha2-384"]

[[example]]
name = "sha2_512"
required-features = ["sha2-512"]
