[package]
name = "chksum-hash"
version = "0.5.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.63.0"
description = "An implementation of hash algorithms for batch and stream computation."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/hash"
license = "MIT"
keywords = ["checksum", "digest", "hash"]
categories = ["algorithms", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-hash-core = "0.0.0"
chksum-hash-md5 = { version = "0.0.1", optional = true }
chksum-hash-sha1 = { version = "0.0.1", optional = true }
chksum-hash-sha2 = { version = "0.0.1", default-features = false, optional = true }

[features]
default = ["md5", "sha1", "sha2"]
md5 = ["chksum-hash-md5"]
sha1 = ["chksum-hash-sha1"]
sha2 = ["chksum-hash-sha2", "sha2-224", "sha2-256", "sha2-384", "sha2-512"]
sha2-224 = ["chksum-hash-sha2/224"]
sha2-256 = ["chksum-hash-sha2/256"]
sha2-384 = ["chksum-hash-sha2/384"]
sha2-512 = ["chksum-hash-sha2/512"]
